--- a/README.html
+++ b/README.html
@@ -251,15 +251,6 @@ body.marp-vscode blockquote {
         </head>
         <body class="vscode-body vscode-dark">
             <h1 id="2024-nsf-pose-award-submission">2024 NSF Pose Award submission</h1>
-<h2 id="install-and-run-docs-server">Install and run docs server</h2>
-<p>Pre-requisites - install <a href="https://python-poetry.org/">poetry</a>
-Run:</p>
-<pre><code>poetry shell
-</code></pre>
-<p>Run:</p>
-<pre><code>mkdocs serve
-</code></pre>
-<p>Open in browser: <a href="http://localhost:8000">http://localhost:8000</a></p>
 <h2 id="document-proper">Document Proper</h2>
 <ul>
 <li><a href="/notes/document-notes/2024-freemocap-nsf-pose-outline.html">Project Description Outline</a> 👈✨</li>
@@ -282,11 +273,20 @@ Run:</p>
 <p><a href="/notes/">NSF Strategic Plan</a></p>
 </li>
 </ol>
-<h2 id="document-proper-1">Document Proper</h2>
+<h2 id="document-notes">Document Notes</h2>
 <ol>
 <li><a href="document-proper/formatting-notes">Formatting Notes</a></li>
 <li><a href="notes/funding-opportunity-announcement-foa/foa-abridged-abridged.html" title="A draft outline of the primary ">Project Description Outline</a></li>
 </ol>
+<h2 id="install-and-run-docs-server">Install and run docs server</h2>
+<p>Pre-requisites - install <a href="https://python-poetry.org/">poetry</a>
+Run:</p>
+<pre><code>poetry shell
+</code></pre>
+<p>Run:</p>
+<pre><code>mkdocs serve
+</code></pre>
+<p>Open in browser: <a href="http://localhost:8000">http://localhost:8000</a></p>
 
             
             <script async type="text/javascript">
