link strategic plan

--- a/README.html
+++ b/README.html
@@ -270,7 +270,7 @@ body.marp-vscode blockquote {
 <p><a href="/notes/nsf-pose-youtube-video/pose-youtube-video.html">POSE Youtube Video Notes</a></p>
 </li>
 <li>
-<p><a href="/notes/">NSF Strategic Plan</a></p>
+<p><a href="https://new.nsf.gov/about/performance/strategic-plan">NSF Strategic Plan</a></p>
 </li>
 </ol>
 <h2 id="document-notes">Document Notes</h2>
