--- a/notes/document-notes/2024-freemocap-nsf-pose-outline.html
+++ b/notes/document-notes/2024-freemocap-nsf-pose-outline.html
@@ -328,10 +328,9 @@ body.marp-vscode blockquote {
 </li>
 </ul>
 </li>
-<li>
-<h2 id="the-banking-model-of-education-perjorative-citefriere1070">The 'banking model' of education (perjorative) \cite{friere1070}</h2>
+<li>The 'banking model' of education (perjorative) \cite{friere1967}
 <ul>
-<li>Paolo friere</li>
+<li>Education as a transactional process of certification</li>
 </ul>
 </li>
 <li>Current systems of academic research and education:
