--- a/notes/document-notes/2024-freemocap-nsf-pose-outline.html
+++ b/notes/document-notes/2024-freemocap-nsf-pose-outline.html
@@ -340,9 +340,15 @@ body.marp-vscode blockquote {
 </ul>
 </li>
 </ul>
-<h5 id="the-problem-of-cottage-industries">The problem of cottage industries</h5>
+<h5 id="on-gardens-and-cottages">On gardens and cottages</h5>
 <ul>
-<li>The problem of publication (cite that guy's blog)</li>
+<li>Need for interoperable research and communication methods,
+<ul>
+<li>'Cottage Industry' model is siloed, inefficient,</li>
+<li>'Garden Ecosystem' for development of self-supportive ecosystem (like 3-sisters from Braiding Sweetgrass)</li>
+</ul>
+</li>
+<li>The problem of publication (<a href="http://neural-reckoning.org/video_metascience_peer_review.html">Dan Goodman stuff</a>)</li>
 <li>The story of Grease Pencil</li>
 </ul>
 <h3 id="need-and-gap">Need and Gap</h3>
