--- a/notes/document-notes/2024-freemocap-nsf-pose-outline.html
+++ b/notes/document-notes/2024-freemocap-nsf-pose-outline.html
@@ -398,7 +398,7 @@ body.marp-vscode blockquote {
 <li>Sustainable organization and vibrant ecosystem existing as a proof-of-concept alternative organizational approach to broadscale academic research, education, and training</li>
 </ul>
 </li>
-<li>Idealist future:
+<li><strong>Idealist future:</strong>
 <ul>
 <li>Iterative solutions on 'project-scale' strategy produces a vibrant ecosystem of ecosystem which fundamentally changes the face of education and scientific research.</li>
 </ul>
@@ -433,7 +433,7 @@ body.marp-vscode blockquote {
 <li>Covert education:
 <ul>
 <li>Using the thing should teach you how it works</li>
-<li>ZoPD &amp; WYLTKM-bot</li>
+<li>[ZoPD] &amp; [WYLTKM]-bot</li>
 </ul>
 </li>
 </ul>
@@ -446,7 +446,7 @@ body.marp-vscode blockquote {
 <li>Focus and maintain a [generic hardware] pipeline as the core path
 <ul>
 <li>Specialized tools (e.g. sterocam, eye trackiner, emg, forceplates) and proprietary options (e.g. iPhone, Basler/FLIR cameras, etc) added via plug-in system</li>
-<li>Developed by community and/or upon client request</li>
+<li>Developed by FMC-C and/or upon [client] request</li>
 </ul>
 </li>
 </ul>
