--- a/notes/document-notes/2024-freemocap-nsf-pose-outline.html
+++ b/notes/document-notes/2024-freemocap-nsf-pose-outline.html
@@ -283,6 +283,16 @@ body.marp-vscode blockquote {
 <li>Corporate mistrust</li>
 <li>Privacy violations</li>
 <li>Worker/social exploitation</li>
+<li>Economic Disparity -&gt; Access Disparity (and many many other disparities)</li>
+<li></li>
+<li>Need for new models of scientific research and higher education
+<ul>
+<li>Needs be self-sustaining</li>
+<li>Generative (for scale)</li>
+<li>As Autonomous As Possible (allow the fewest to do the most)</li>
+<li>Topic/software/hardware agnostic, adaptable, extensible, maintainable, and replicable</li>
+</ul>
+</li>
 </ul>
 <h4 id="ethical-context">Ethical context</h4>
 <ul>
@@ -480,7 +490,7 @@ body.marp-vscode blockquote {
 </li>
 <li><strong>Cost</strong>
 <ul>
-<li>Methods to avoid price-barrier for paid aspects of FMC-F Activities (see <span class='foam-tag'>#no</span> artificial scarcity, # revenue streams)</li>
+<li>Methods to avoid price-barrier for paid aspects of [FMC-F] Activities (see <span class='foam-tag'>#no</span> artificial scarcity, # revenue streams)</li>
 <li>[HumbleBundleModel] - Sliding scale pay options
 <ul>
 <li>Recommended cost relative to break-even.</li>
@@ -531,7 +541,7 @@ body.marp-vscode blockquote {
 </li>
 <li><strong>Cloud Services (SkellyCloud)</strong>
 <ul>
-<li>Offer 'free' tier, tie to open finances, allow community to set primary constants relative to a fixed % of the FMC-F annual budget</li>
+<li>Offer 'free' tier, tie to open finances, allow community to set primary constants relative to a fixed % of the [FMC-F] annual budget</li>
 <li>Server side processing
 <ul>
 <li>Mocap data</li>
@@ -665,7 +675,7 @@ body.marp-vscode blockquote {
 <ul>
 <li>Lives on <a href="http://freemocap.org">freemocap.org</a> chat</li>
 <li>Lives in Community server (summonable, requests consent before interacting with new users)</li>
-<li>Lives in local app (either connect to existing API via API key, run a local model, or use the FMC-F SkellyModel endpoint (requires account))</li>
+<li>Lives in local app (either connect to existing API via API key, run a local model, or use the [FMC-F] SkellyModel endpoint (requires account))</li>
 <li>See AI-assisted-psuedo-mentorship</li>
 </ul>
 </li>
@@ -674,7 +684,7 @@ body.marp-vscode blockquote {
 </ul>
 <h4 id="datasets-and-derived-models">Datasets and Derived Models</h4>
 <ul>
-<li>See `FMC-F/Revenue/Federated and co-op datasets and models</li>
+<li>See `[FMC-F]/Revenue/Federated and co-op datasets and models</li>
 </ul>
 <h3 id="the-freemocap-community-fmc-c">The FreeMoCap Community (FMC-C)</h3>
 <ul>
@@ -776,7 +786,7 @@ body.marp-vscode blockquote {
 </ul>
 </li>
 </ul>
-<h3 id="the-freemocap-foundation-fmc-f">The FreeMoCap Foundation (FMC-F)</h3>
+<h3 id="the-freemocap-foundation-fmc-f">The FreeMoCap Foundation ([FMC-F])</h3>
 <ul>
 <li>Economically self-sustaining combination research/software development institute</li>
 </ul>
@@ -835,7 +845,7 @@ body.marp-vscode blockquote {
 <li>Transition plan based on relative weighting of Board vs Community voting on key elements (see below)
 <ul>
 <li>Present: 100% Board (No operating mechanisms that allow for direct community input)</li>
-<li>Eventual: 50% Board, 50% Community (FMC-F President is tie-breaker)
+<li>Eventual: 50% Board, 50% Community ([FMC-F] President is tie-breaker)
 <ul>
 <li>In case of true deadlock FMC-C can Hard Fork, but lets hope it doesn't come to that</li>
 </ul>
@@ -914,14 +924,14 @@ body.marp-vscode blockquote {
 <li>Manage finances
 <ul>
 <li>see (Revenue Streams)</li>
-<li>Things covered under 'charitable activities' IRS definition are handled by FMC-F</li>
+<li>Things covered under 'charitable activities' IRS definition are handled by [FMC-F]</li>
 <li>Non-charitable activities handled by subsidiary for-profit (Skellytech)</li>
 </ul>
 </li>
 </ul>
 <h4 id="licensing-model">Licensing Model</h4>
 <ul>
-<li>AGPLv3 for all repos owned by FMC-Foundation
+<li>AGPLv3 for all repos owned by [FMC-F]oundation
 <ul>
 <li>&quot;Its a dart frog party, and everyone is invited!&quot;</li>
 <li>AGPLv3 as protection from exploitation by proprietary softwares</li>
@@ -1372,9 +1382,9 @@ body.marp-vscode blockquote {
 </ul>
 <h5 id="sustainability-through-replicability"><strong>&quot;Sustainability through replicability&quot;</strong></h5>
 <ul>
-<li>Maintain organizational documents, Standard Operating Procedures (SOPs), and eductional outreach to encourage others to create organizations with similar stucture to FMC-F</li>
-<li>Good for other people from wildly different domains (not relevant to FMC-F mission)</li>
-<li>Could spawn sub-orgs from with FMC-F (optionally existing within FMC-F umbrella, either as non-profit or for-profit org)</li>
+<li>Maintain organizational documents, Standard Operating Procedures (SOPs), and eductional outreach to encourage others to create organizations with similar stucture to [FMC-F]</li>
+<li>Good for other people from wildly different domains (not relevant to [FMC-F] mission)</li>
+<li>Could spawn sub-orgs from with [FMC-F] (optionally existing within [FMC-F] umbrella, either as non-profit or for-profit org)</li>
 </ul>
 <h5 id="sustainability-through-revenue"><strong>Sustainability through revenue</strong></h5>
 <p>Other big FOSS orgs - Patchwork financials</p>
