--- a/notes/document-notes/2024-freemocap-nsf-pose-outline.html
+++ b/notes/document-notes/2024-freemocap-nsf-pose-outline.html
@@ -284,14 +284,6 @@ body.marp-vscode blockquote {
 <li>Privacy violations</li>
 <li>Worker/social exploitation</li>
 <li>Economic Disparity -&gt; Access Disparity (and many many other disparities)</li>
-<li>Need for new models of scientific research and higher education
-<ul>
-<li>Needs be self-sustaining</li>
-<li>Generative (for scale)</li>
-<li>As Autonomous As Possible (allow the fewest to do the most)</li>
-<li>Topic/software/hardware agnostic, adaptable, extensible, maintainable, and replicable</li>
-</ul>
-</li>
 </ul>
 <h4 id="ethical-context">Ethical context</h4>
 <ul>
@@ -362,20 +354,30 @@ body.marp-vscode blockquote {
 </ul>
 <h3 id="need-and-gap">Need and Gap</h3>
 <ul>
-<li>Current model not fit for present and future needs</li>
-<li>Need alternative models, organizations, infrastructures for science and education
+<li>
+<p>Current model not fit for present and future needs</p>
+</li>
+<li>
+<p>Need alternative models, organizations, infrastructures for science and education</p>
 <ul>
 <li>Generative and self sustaining
 <ul>
 <li>Von Neumann machine - Sustainibility through replicability</li>
 </ul>
 </li>
+<li>As Autonomous As Possible (allow the fewest to do the most)</li>
+<li>Topic/software/hardware agnostic</li>
+<li>Multi-scale adaptable, extensible, maintainable, and replicable [SEP]</li>
 </ul>
 </li>
-<li>Two Loops theory of social progress
+<li>
+<p>Two Loops theory of social progress</p>
 <ul>
-<li>Not saying we should burn it all to the ground</li>
+<li>Not saying we should burn it all to the ground
+<ul>
 <li>It's already burning</li>
+</ul>
+</li>
 <li>We need to build a better ship
 <ul>
 <li>&amp; f-ing ASAP plz thx</li>
@@ -385,9 +387,19 @@ body.marp-vscode blockquote {
 </li>
 </ul>
 <h2 id="objectives-and-long-term-vision">Objectives and Long term vision</h2>
+<h3 id="aspirational-goals">Aspirational Goals</h3>
 <ul>
-<li>Make FreeMoCap the best mocap option available</li>
-<li>Maximize accessibility</li>
+<li>Make FreeMoCap the best motion capture option available at any price
+<ul>
+<li>Bench mark agaist modern gold-standard techniques and proprietary softwares [Validation], [Diagnostics]</li>
+<li>&quot;We define the floor&quot;</li>
+</ul>
+</li>
+<li>Maximize accessibility
+<ul>
+<li>&quot;</li>
+</ul>
+</li>
 <li>Build vibrant community of user/developers</li>
 <li>Develop implicit educational methods</li>
 </ul>
