--- a/notes/document-notes/2024-freemocap-nsf-pose-outline.html
+++ b/notes/document-notes/2024-freemocap-nsf-pose-outline.html
@@ -397,11 +397,21 @@ body.marp-vscode blockquote {
 </li>
 <li>Maximize accessibility
 <ul>
-<li>&quot;</li>
+<li>&quot;We follow a “Universal Design” development philosophy, with the goal of creating a system that serves the needs of a professional research scientist while remaining intuitive to a 13-year-old with no technical training and no outside assistance.&quot; (<a href="http://freemocap.org">freemocap.org</a>)</li>
 </ul>
 </li>
-<li>Build vibrant community of user/developers</li>
-<li>Develop implicit educational methods</li>
+<li>Community co-ownership and self-governance
+<ul>
+<li>[BDFaSPoT]</li>
+</ul>
+</li>
+<li>Covert Education
+<ul>
+<li>[Anti-paradox of active user]</li>
+<li>&quot;Using the thing teaches you how it works</li>
+<li>[WYLTKM]-Bot</li>
+</ul>
+</li>
 </ul>
 <h2 id="potential-broader-impacts">Potential Broader Impacts</h2>
 <p>The long term potential of a generative plan is difficult to constrain</p>
@@ -440,6 +450,22 @@ body.marp-vscode blockquote {
 </ul>
 <h3 id="universal-access">Universal Access</h3>
 <ul>
+<li>Maximize access to maximize impact</li>
+<li>Free software, so econimically maximum possible userbase
+<ul>
+<li>Quick as possible route from &quot;Just heard of this&quot; to &quot;Oh look, a skeleton!&quot;
+<ul>
+<li>minimize 'time to skelly' [TTS]</li>
+<li>Inside out education
+<ul>
+<li>Greased rail to the good stuff</li>
+<li>Educational routes from their towards whichever sub-field draws the user (Plot-hooks)</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
 <li><strong>Education focus</strong>
 <ul>
 <li>to avoid [paradox of the active user]</li>
