--- a/notes/document-notes/2024-freemocap-nsf-pose-outline.html
+++ b/notes/document-notes/2024-freemocap-nsf-pose-outline.html
@@ -450,16 +450,16 @@ body.marp-vscode blockquote {
 </ul>
 <h3 id="universal-access">Universal Access</h3>
 <ul>
-<li>Maximize access to maximize impact</li>
-<li>Free software, so econimically maximum possible userbase
+<li><strong>Maximize access to maximize impact</strong>
 <ul>
+<li>Free software, so econimically maximum possible userbase</li>
 <li>Quick as possible route from &quot;Just heard of this&quot; to &quot;Oh look, a skeleton!&quot;
 <ul>
 <li>minimize 'time to skelly' [TTS]</li>
 <li>Inside out education
 <ul>
 <li>Greased rail to the good stuff</li>
-<li>Educational routes from their towards whichever sub-field draws the user (Plot-hooks)</li>
+<li>Educational routes from their towards whichever sub-field draws the user [Plot-hook]</li>
 </ul>
 </li>
 </ul>
@@ -476,7 +476,7 @@ body.marp-vscode blockquote {
 <li>Provide easy access to resources (AI, static, community)</li>
 </ul>
 </li>
-<li>(see <strong>AI Simulacrum Mentorship</strong>)</li>
+<li>(see <strong>AI Simulacrum Pseudo Mentorship</strong>[AiSPM])</li>
 <li>Covert education:
 <ul>
 <li>Using the thing should teach you how it works</li>
