--- a/notes/document-notes/2024-freemocap-nsf-pose-outline.html
+++ b/notes/document-notes/2024-freemocap-nsf-pose-outline.html
@@ -459,7 +459,7 @@ body.marp-vscode blockquote {
 <li>Inside out education
 <ul>
 <li>Greased rail to the good stuff</li>
-<li>Educational routes from their towards whichever sub-field draws the user [Plot-hook]</li>
+<li>Educational routes from their towards whichever sub-field draws the user [Plot-hook-strategy]</li>
 </ul>
 </li>
 </ul>
