--- a/notes/document-notes/2024-freemocap-nsf-pose-outline.html
+++ b/notes/document-notes/2024-freemocap-nsf-pose-outline.html
@@ -468,8 +468,23 @@ body.marp-vscode blockquote {
 </li>
 <li><strong>Education focus</strong>
 <ul>
-<li>to avoid [paradox of the active user]</li>
-<li>foster <strong>long term user relationships</strong></li>
+<li>Core design built around:
+<ul>
+<li>Progressive Disclosure [WYLTKM]-bot</li>
+<li>Modern best practices</li>
+<li>Empirically measured user workflow data
+<ul>
+<li>[SkellyBot-Local]</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>to avoid [paradox of the active user]
+<ul>
+<li>[User-State-Model-Trajectory-Control]</li>
+</ul>
+</li>
+<li>foster <strong>long term user relationships</strong> []</li>
 <li>encourage community engagement
 <ul>
 <li>Push user-student into 'zone of proximal development'</li>
