--- a/notes/document-notes/2024-freemocap-nsf-pose-outline.html
+++ b/notes/document-notes/2024-freemocap-nsf-pose-outline.html
@@ -300,7 +300,11 @@ body.marp-vscode blockquote {
 <li>Need for fast development of FOSS tools before corpo tech dominates</li>
 </ul>
 </li>
-<li>Need for decentralized user-directed  FOSS projects</li>
+<li>Need for decentralized user-directed  FOSS projects
+<ul>
+<li>With accompanying  organizational <strong>structures to support</strong></li>
+</ul>
+</li>
 <li>Inaccessiblity of science and technogy
 <ul>
 <li>Growing Gaps
@@ -425,7 +429,7 @@ body.marp-vscode blockquote {
 </li>
 <li><strong>Expected outcomes:</strong>
 <ul>
-<li>Support and sustain the growing community of <code>freemocap</code> users, loosely organized around a shared love of the measurement, investigation, analysis, and expression of human and animal movement (broadly construed) XP leveling)</li>
+<li>Support and sustain the growing community of <code>freemocap</code> users, loosely organized around a shared love of the measurement, investigation, analysis, and expression of human and animal movement (broadly construed)</li>
 <li>Sustainable organization and vibrant ecosystem existing as a proof-of-concept alternative organizational approach to broadscale academic research, education, and training</li>
 </ul>
 </li>
